--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,2 +1,5 @@
 <div id="<%= dom_id product %>">
+  <h1><%= product.name %></h1>
+  <p><%= product.description %></p>
+  <p>$<%= product.price %></p>
 </div>
