--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -12,6 +12,21 @@
   <% end %>
 
   <div>
+    <%= form.label :name %><br>
+    <%= form.text_field :name %>
+  </div>
+
+  <div>
+    <%= form.label :description %><br>
+    <%= form.text_area :description %>
+  </div>
+
+  <div>
+    <%= form.label :price %><br>
+    <%= form.number_field :price, step: 0.01 %>
+  </div>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
